# claude-status-update

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
.status-update/: signals.json
commands/: generate.md
docs/: status-update-plugin-slices.md  status-update-plugin.md
docs/design/: PRD.md  SPEC.md
scripts/: status_update_parser.py  validate_summary.py
tests/: test_file_discovery.py  test_signal_extraction.py  test_validate_summary.py
