[project]
name = "claude-status-update"
version = "0.1.0"
description = "Generate a standup-ready status update from your Claude Code sessions"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "MIT"
authors = [
    { name = "Alexander Werner" }
]
keywords = ["claude", "standup", "status-update", "session", "summary", "productivity"]

dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
claude-status-update = "claude_status_update.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_status_update"]

[tool.ruff]
line-length = 100
target-version = "py310"
